@@ -24,3 +24,4 @@ depth: 1
  * Prevent error in handling null ParentalKeys when populating the reference index (Matt Westcott)
  * Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
  * Ensure background HTTP request to clear stale preview data correctly respects the `CSRF_HEADER_NAME` setting (Sage Abdullah)
+ * Prevent error on aging pages report when "Last published by" user has been deleted (Joshua Munn)
