@@ -57,6 +57,7 @@ Changelog
  * Fix: Prevent error in handling null ParentalKeys when populating the reference index (Matt Westcott)
  * Fix: Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)
  * Fix: Ensure background HTTP request to clear stale preview data correctly respects the `CSRF_HEADER_NAME` setting (Sage Abdullah)
+ * Fix: Prevent error on aging pages report when "Last published by" user has been deleted (Joshua Munn)
 
 
 4.1 LTS (01.11.2022)
